--- a/impressum.html
+++ b/impressum.html
@@ -6,6 +6,10 @@
     <title>Impressum — Placeholder</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/impressum.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <section>
@@ -60,6 +64,11 @@
           unwirksam sein, bleiben die übrigen Bestimmungen davon unberührt.
         </li>
       </ol>
+
+      <a href="index.html" class="back-to-home-btn">
+        <i class="fas fa-home"></i>
+        <span>Zurück zur Hauptseite</span>
+      </a>
     </section>
   </body>
 </html>
